# hello-world

./: Dockerfile  README.md  pyproject.toml
src/hello_world/: djangoserver.py  main.py
