[project]
name = "hello-world"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "public", email = "andirkh@petalmail.com"},
]
dependencies = [
    "Flask>=3.0.2",
    "django>=5.0.2",
    "socketify>=0.0.27",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "pdm run src/hello_world/main.py"
build = "docker build -t hello-world ."
